src/assets/sass/modules/_alerts.scss
/* Messages
   ========================================================================== */

/**
 * Alert labels.
 *
 * Example HTML:
 *
 * <span class="success">
 * <span class="error">
 * <strong class="success">
 * <strong class="error">
 */

li.success {
    background: $color-success-background;
}

.success:not(li) {
    color: $color-success-text;
}

li.warning {
    background: $color-warning-background;
}

.warning:not(li) {
    color: $color-warning-text;
}

li.error {
    background: $color-error-background;
}

.error:not(li) {
    color: $color-error-text;
}

li.information {
    background: $color-info-background;
}

.information:not(li) {
    color: $color-info-text;
}

/**
 * Highlight background.
 *
 * Example HTML:
 *
 * <table>
 *     <tr>
 *         <td class="highlight></td>
 *         <td></td>
 *     </tr>
 * </table>
 */

.highlight {
    background: $color-highlight-box;
}

/**
 * Alert boxes.
 *
 * Example HTML:
 *
 * <p class="alert-block success">
 * <p class="alert-block error">
 */

.alert-block {
    padding: 0.5em 1em; // 6px / 12px
    clear: both;
    border: 1px solid;

    &.success {
        border-color: $color-success-border;
        background: $color-success-background;
    }

    &.warning {
        border-color: $color-warning-border;
        background: $color-warning-background;
    }

    &.error {
        border-color: $color-error-border;
        background: $color-error-background;
    }

    &.information {
        border-color: $color-info-border;
        background: $color-info-background;
    }
}

/**
 * System messages.
 *
 * Example HTML:
 *
 * <div id="messagepane">
 *     <span class="messageflash error" role="alert" aria-live="assertive">
 *         <span class="ui-icon ui-icon-alert"></span>
 *         Username not found.
 *         <a class="close"><span class="ui-icon ui-icon-close">Close</span></a>
 *     </span>
 * </div>
 */

#messagepane {
    position: fixed;
    top: 0;
    left: 50%;
    max-width: 100%;
    transform: translateX(-50%);
    text-align: center;
    z-index: 1000;

    .messageflash {
        display: inline-block;
        position: relative;
        max-width: 100%;
        margin: 0 auto;
        padding: 0.5em 3em 0.5em 1em;
        border: 1px solid;
        border-top: 0;
        border-radius: 0 0 $border-radius $border-radius;
        color: $color-text-inverse;
        text-align: left;
        box-shadow: $standard-shadow;
        box-sizing: border-box;
        overflow-wrap: break-word;

        &.success {
            border-color: $color-success-border;
            background: $color-success-text;
        }

        &.warning {
            border-color: $color-warning-border;
            background: $color-warning-text;
        }

        &.error {
            border-color: $color-error-border;
            background: $color-error-text;
        }
    }

    a {
        color: $color-text-inverse;
    }
}

/*
 * System message close icon.
 */

.close {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    width: 2.25em;
    border-left: 1px solid rgba(255, 255, 255, 0.66);

    span {
        position: absolute;
        top: 50%;
        right: 0.5em;
        margin-top: -9px;
        opacity: 0.66;

        &:hover {
            opacity: 1;
        }
    }
}

/*
 * System message flipped layout for RTL languages.
 */

[dir="rtl"] #messagepane .messageflash {
    padding: 0.5em 1em 0.5em 3em;
    text-align: right;
}

[dir="rtl"] .close {
    right: auto;
    left: 0;
    border-right: 1px solid rgba(255, 255, 255, 0.66);
    border-left: 0;

    span {
        right: auto;
        left: 0.5em;
    }
}

/*
 * Flash the alert message using CSS animation.
 */

.messageflash {
    animation: messageflash 1s;
}

